Changelog update - `v0.4.0` (#436)