@@ -2,7 +2,6 @@ import org.jetbrains.changelog.markdownToHTML
 import org.jetbrains.intellij.platform.gradle.IntelliJPlatformType
 import org.jetbrains.intellij.platform.gradle.TestFrameworkType
 import org.jetbrains.intellij.platform.gradle.models.ProductRelease
-import org.jetbrains.intellij.platform.gradle.tasks.RunIdeTask
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 import java.io.FileOutputStream
 import java.net.URL
@@ -20,13 +19,13 @@ val spacePassword =
     System.getProperty("space.pass")?.toString() ?: project.properties["spacePassword"]?.toString() ?: ""
 
 // the test generation module for interacting with Grazie (used when the space credentials are provided)
-val grazieTestGenerationVersion = "1.0.5"
+val grazieTestGenerationVersion = "1.0.9"
 
 plugins {
     // Java support
     id("java")
     // Kotlin support
-    id("org.jetbrains.kotlin.jvm") version "1.9.0"
+    id("org.jetbrains.kotlin.jvm") version "2.1.0"
     // Gradle IntelliJ Plugin
     id("org.jetbrains.intellij.platform") version "2.1.0"
     // Gradle IntelliJ Plugin Migration Help (uncomment it for migration tips)
@@ -78,7 +77,6 @@ if (spaceCredentialsProvided()) {
 
     // Add the dependencies for the new source set
     dependencies {
-        add(hasGrazieAccess.implementationConfigurationName, kotlin("stdlib"))
         add(hasGrazieAccess.implementationConfigurationName, "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3")
         add(hasGrazieAccess.implementationConfigurationName, "org.jetbrains.research:grazie-test-generation:$grazieTestGenerationVersion")
     }
@@ -172,6 +170,9 @@ dependencies {
     // https://gitlab.com/mvysny/konsume-xml
     implementation("com.gitlab.mvysny.konsume-xml:konsume-xml:1.0")
 
+    // for merging generated kex tests into a single file
+    implementation("com.github.javaparser:javaparser-core:3.26.1")
+
     // From the jetbrains repository
     testImplementation("com.intellij.remoterobot:remote-robot:0.11.13")
     testImplementation("com.intellij.remoterobot:remote-fixtures:0.11.13")
@@ -230,13 +231,13 @@ intellijPlatform {
             select {
                 types = listOf(IntelliJPlatformType.IntellijIdeaUltimate)
                 channels = listOf(ProductRelease.Channel.RELEASE)
-                sinceBuild = properties("pluginSinceBuild")
+                sinceBuild = properties("pluginUntilBuild")
                 untilBuild = properties("pluginUntilBuild")
             }
         }
         freeArgs = listOf(
             "-mute",
-            "TemplateWordInPluginId,ForbiddenPluginIdPrefix"
+            "TemplateWordInPluginId,ForbiddenPluginIdPrefix",
         )
     }
 }
@@ -256,6 +257,12 @@ changelog {
 // }
 
 tasks {
+    // enable K2 mode in UI test
+    runIde {
+        jvmArgumentProviders += CommandLineArgumentProvider {
+            listOf("-Didea.kotlin.plugin.use.k2=true")
+        }
+    }
 
     compileKotlin {
         dependsOn("updateEvosuite")
@@ -303,15 +310,6 @@ tasks {
                 }
                 subList(indexOf(start) + 1, indexOf(end))
             }.joinToString("\n").run { markdownToHTML(this) },
-        )
-
-        // Get the latest available change notes from the changelog file
-        changeNotes.set(
-            provider {
-                changelog.run {
-                    getOrNull(properties("pluginVersion")) ?: getLatest()
-                }.toHTML()
-            },
         )
     }
 
@@ -424,41 +422,5 @@ tasks.register<Copy>("copyJUnitRunnerLib") {
  * @return the original string if it is not null, or the default string if the original string is null
  */
 fun String?.orDefault(default: String): String = this ?: default
-
-/**
- * This code sets up a Gradle task for running the plugin in headless mode
- *
- * @param root The root directory of the project under test.
- * @param file The file containing unit under test.
- * @param cut The class under test.
- * @param cp The classpath of the project.
- * @param llm The model used for the test generation task.
- * @param token The token for using LLM.
- * @param prompt a txt file containing the LLM's prompt template
- * @param out The output directory for the project.
- * @param enableCoverage flag to enable/disable coverage computation
- */
-tasks.create<RunIdeTask>("headless") {
-    val root: String? by project
-    val file: String? by project
-    val cut: String? by project
-    val cp: String? by project
-    val junitv: String? by project
-    val llm: String? by project
-    val token: String? by project
-    val prompt: String? by project
-    val out: String? by project
-    val enableCoverage: String? by project
-
-    args = listOfNotNull("testspark", root, file, cut, cp, junitv, llm, token, prompt, out, enableCoverage.orDefault("false"))
-
-    jvmArgs(
-        "-Xmx16G",
-        "-Djava.awt.headless=true",
-        "--add-exports",
-        "java.base/jdk.internal.vm=ALL-UNNAMED",
-        "-Didea.system.path",
-    )
-}
 
 fun spaceCredentialsProvided() = spaceUsername.isNotEmpty() && spacePassword.isNotEmpty()
